objects/vlocity_cmt__CalculationProcedure__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__ActionClassName__c</fullName>
        <label>Action Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>The globally unique identifier of the calculation procedure. Used to identify the calculation procedure across Salesforce instances.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SubType__c</fullName>
        <label>SubType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annual</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rating</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Vlocity Calculation Procedure</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Calculation Procedure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Calculation Procedures</pluralLabel>
    <recordTypes>
        <fullName>vlocity_cmt__ClassBased</fullName>
        <active>true</active>
        <label>Class Based</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__Declarative</fullName>
        <active>true</active>
        <label>Declarative</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>